fix: Remove unnecessary z-index from timeline image for better layout

--- a/cafe-management/Frontend/src/app/best-seller/best-seller.component.scss
+++ b/cafe-management/Frontend/src/app/best-seller/best-seller.component.scss
@@ -11557,7 +11557,6 @@
   }
   .timeline > li .timeline-image {
     position: absolute;
-    z-index: 100;
     left: 0;
     width: 80px;
     height: 80px;
